# systemd-journal-source

./: .gitignore  Cargo.toml  Connector.toml  README.md  sample-config.yaml
.github/workflows/: todo.yml
src/: config.rs  main.rs
